# armicontrib-openmc

./: .gitignore  CHANGES.md  README.md  conftest.py  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: unittests.yaml
armicontrib/armiopenmc/: __init__.py  const.py  executers.py  executionOptions.py  inputWriters.py  mgxsWriter.py  outputReaders.py  plugin.py  schedulers.py  settings.py
armicontrib/armiopenmc/tests/: test_constants.py
doc/: conf.py  index.rst
openmcdemo/: __init__.py  __main__.py  app.py
openmcdemo/cases/c5g7Multigroup/: C5G7_COMPXS.ascii  C5G7_COMPXS.h5  c5g7-blueprints.yaml  c5g7-settings.yaml
openmcdemo/cases/c5g7Multigroup/scripts/: makeCompxs.py  printHomogenizedDensities.py
openmcdemo/cli/: runC5G7.py  runFFTF.py
